<resources>
    <string name="app_name">EfficiencyManager</string>
    <string name="work">Work</string>
    <string name="leisureTime">Leisure Time</string>
    <string name="project">Project</string>
    <string name="newProject">New Project</string>
    <string name="title">Title</string>
    <string name="start">Start</string>
    <string name="random">Random</string>
    <string name="book">Book</string>
    <string name="newBook">New Book</string>
    <string name="youtube">Youtube</string>
    <string name="readingMinutes">Reading %1$s for %2$d Minutes.</string>
    <string name="stoppedAt">You stopped at page %d</string>
    <string name="newPage">New Page Number</string>
    <string name="atYoutube">You are at Youtube for %d Minutes.</string>
    <string name="remindAt">Remaind me in</string>
    <string name="minutesToWork">Minutes to work again.</string>
    <string name="concentration">Concentration</string>
    <string name="comment">Comment</string>
    <string name="continueOnProject">Continue on Project</string>
    <string name="workOnOtherProject">Work on other Project</string>
    <string name="makeALongerBreak">Make a longer break.</string>
    <string name="timeTillBreak">Time until next break</string>
    <string name="timeUntillNextSession">Time until next session</string>
    <string name="add">Add</string>
    <string name="finished">Finished</string>
    <string name="realyQuit">Really quit this working session?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continueB">Continue</string>
    <string name="otherProject">Other Project</string>
    <string name="enterAName">Please enter a name</string>
    <string name="projectAlreadyEx">Project already exists</string>
    <string name="goWorking">Go Working!</string>
    <string name="timer">Timer: %s</string>
    <string name="htmlReportDaily">"<![CDATA[<h1>Work Report</h1><p>You have been <strong>working</strong> for <strong>%1$d</strong> minutes, serperated over %2$d sessions. In the last seven days, you have spent %3$d hours on work, which is, in comparison to your last week, <strong>%4$s productive</strong>. Your <strong>motivation</strong> this week was <strong>%5$s average</strong>.</p><p>Today you have taken %6$d minutes of your time to watch some series, tv, youtube... which leads to an <strong>work-ratio</strong> of <strong>%7$f</strong>. To give you an overview, have have spent %8$d minutes on your leisure time activities in the last seven days and had an weekly work-ratio of %9$f. Beside watching tv etc. you have also been reading for %10$d minutes today and %11$d minutes this week. Thats gives an read-watch ratio of %12$f for today and %13$f for this week.</p><p>On an larger scale, you have worked on %14$d days this week and accumulated %15$d hours of work last month.</p>]]>"</string>
    <string name="over">over</string>
    <string name="under">under</string>
    <string name="highover">high over</string>
    <string name="very">very</string>
    <string name="not">not</string>
    <string name="notvery">notvery</string>
</resources>
