<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_break_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="laurenzsoft.com.efficiencymanager.BreakScreen">

    <TextView
        android:text="@string/timeUntillNextSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView8"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/timeUntillNextSession" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"
        android:id="@+id/breakTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageButton
        android:src="@drawable/start"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/breakStartButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView21"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/comment" />

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@+id/textView21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:text="@string/title" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/breakStartButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checkedButton="@+id/breakContinueRB">



    <RadioButton
        android:text="@string/continueB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/breakContinueRB"
         />

    <RadioButton
        android:text="@string/otherProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/breakOtherProjectRB" />

    <RadioButton
        android:text="@string/leisureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/breakLeisureTimeRB" />
    </RadioGroup>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/breakCommenTitleEditText"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView11"
        android:layout_toRightOf="@+id/textView11" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/breakCommentEditText"
        android:layout_below="@+id/breakCommenTitleEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textView10" />

    <ImageButton
        android:src="@drawable/add"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:id="@+id/breakAddCommentButton"
        tools:text="@string/add"
        android:layout_above="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/breakConecntrationRatingBar"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="3"
        android:stepSize="1"
        android:layout_above="@+id/breakAddCommentButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/concentration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/concentration"
        android:layout_above="@+id/breakConecntrationRatingBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
