<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="laurenzsoft.com.efficiencymanager.WorkScreen"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25">

        <TextView
            android:text="@string/project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/workProjectPicker" />

        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignBaseline="@+id/workNewProjectNameEditText"
            android:layout_alignBottom="@+id/workNewProjectNameEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:src="@drawable/work"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/workStartButton"
            android:layout_below="@+id/workProjectPicker"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/textView2" />

        <ImageButton
            android:src="@drawable/add"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/workAddButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/workNewProjectNameEditText"
            android:layout_above="@+id/workAddButton"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp" />

        <TextView
            android:text="@string/newProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_above="@+id/workNewProjectNameEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <ImageButton
        android:src="@drawable/random"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:text="@string/random"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:id="@+id/workRandomButton" />
</LinearLayout>
