<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reading_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="laurenzsoft.com.efficiencymanager.ReadingScreen">
    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:srcCompat="@drawable/timer"
        android:id="@+id/imageView"
        android:scaleType="fitCenter"
        android:layout_below="@+id/readingForMinutesTV"
        android:layout_toEndOf="@+id/readingStoppedPageTV"
        android:adjustViewBounds="true"
        android:cropToPadding="true" />
    <TextView
        android:text="@string/readingMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/readingForMinutesTV"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:text="@string/remindAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/readingStoppedPageTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView19"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_below="@+id/textView19"
        android:id="@+id/readingTimeEditText"
        android:text="15"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView19" />

    <TextView
        android:text="@string/stoppedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/readingStoppedPageTV"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@+id/readingForMinutesTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView20"
        android:layout_alignParentEnd="true"
        android:id="@+id/readingTimer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="Timer" />

    <TextView
        android:text="@string/minutesToWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView20"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@+id/textView19"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/readingTimeEditText" />

    <ImageButton
        android:src="@drawable/work"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:text="@string/work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/readingWorkButton"
        tools:text="@string/work"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/readingTimeEditText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/readingRemindButton" />

    <ImageButton
        android:src="@drawable/add"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:text="@android:string/ok"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:id="@+id/readingRemindButton"
        tools:text="@android:string/ok"
        android:layout_below="@+id/textView20"
        android:layout_alignParentStart="true" />



</RelativeLayout>
