<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="laurenzsoft.com.efficiencymanager.LeisureTimeScreen"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.35">

        <TextView
            android:text="@string/book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView12"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/leisureBookPicker" />

        <TextView
            android:text="@string/newBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/leisureBookPicker"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView13"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/leisureTitleEditText"
            android:layout_below="@+id/textView13"
            android:layout_toRightOf="@+id/textView13"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignBaseline="@+id/leisureTitleEditText"
            android:layout_alignBottom="@+id/leisureTitleEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:src="@drawable/book"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:text="@string/book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/leisureBookButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/leisureNewBookButton" />

        <ImageButton
            android:src="@drawable/add"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:text="@string/newBook"
            android:layout_width="wrap_content"
            android:layout_below="@+id/textView14"
            android:layout_alignParentStart="true"
            android:id="@+id/leisureNewBookButton"
            android:layout_alignParentEnd="true"
            android:layout_height="64dp" />
    </RelativeLayout>

    <ImageButton
        android:src="@drawable/watch"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:text="@string/youtube"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.65"
        android:id="@+id/leisureYoutubeButton" />
</LinearLayout>
